--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Coming Soon!</h1>
+   <div id="particles-js"></div>
+
+<script src="particles.min.js"></script>
   </body>
 </html>
