--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Vinay Sharma</title>
+    <meta property="og:title" content="Vinay Sharma" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vinay0410.tech" />
+    <meta property="og:image" content="https://vinay0410.tech/ogp/image.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/style.css">
   </head>
