--- a/resume/index.html
+++ b/resume/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Vinay Sharma Resume</title>
+    <meta property="og:title" content="Vinay Sharma" />
+    <meta property="og:description" content="Resume"/>
+    <meta property="og:url" content="https://vinay0410.tech/resume" />
+    <meta property="og:image" content="https://vinay0410.tech/ogp/resume.png" />
     <meta HTTP-EQUIV="REFRESH" content="0; url=./myResume.pdf">
   </head>
 </html>
