embed resume as pdf

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html>
   <head>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
     <meta charset="utf-8">
     <title>Vinay Sharma Resume</title>
     <meta property="og:title" content="Vinay Sharma" />
     <meta property="og:description" content="Resume"/>
     <meta property="og:url" content="https://vinay0410.tech/resume" />
     <meta property="og:image" content="https://vinay0410.tech/ogp/resume.png" />
-    <meta HTTP-EQUIV="REFRESH" content="0; url=./myResume.pdf">
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="100px" />
+    <meta property="og:image:height" content="100px" />
+    <iframe src="https://vinay0410.tech/resume/myResume.pdf" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
   </head>
 </html>
