--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta property="og:title" content="Vinay Sharma" />
     <meta property="og:description" content="Webpage"/>
     <meta property="og:url" content="https://vinay0410.tech" />
-    <meta property="og:image" content="https://vinay0410.tech/ogp/website.png" />
+    <meta property="og:image" content="https://vinay0410.tech/ogp/webpage.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="512px" />
+    <meta property="og:image:height" content="512px" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/style.css">
   </head>
