--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vinay Sharma</title>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <meta property="og:title" content="Vinay Sharma" />
     <meta property="og:description" content="Webpage"/>
     <meta property="og:url" content="https://vinay0410.tech" />
