--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 	
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73113125-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-73113125-2');
+    </script>
+
     <meta charset="utf-8">
     <title>Vinay Sharma</title>
     <meta name=”viewport” content=”width=device-width, initial-scale=1″>
