--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
                 </svg>
                 
             </a>
-            <a href="resume/" target="_blank">
+            <!-- <a href="resume/" target="_blank">
           <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  
 <svg height="40" width="40" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 508 508" style="enable-background:new 0 0 508 508;" xml:space="preserve">
 <circle style="fill:#FD8469;" cx="254" cy="254" r="254"/>
@@ -340,7 +340,7 @@
 <g>
 </g>
 </svg>
-</a>
+</a> -->
 </div>
 </centre>
         </div>
